--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,14 +3,12 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-RUN npm install -g pnpm
-
 COPY package.json /app/package.json
 
-RUN pnpm i
+RUN npm i
 
 COPY . .
 
 EXPOSE 3000
 
-CMD ["pnpm", "run", "dev"]
+CMD ["npm", "run", "dev"]
