--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,11 +6,11 @@ ENV MAVEN_OPTS="-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
 # set working directory
 WORKDIR /app
 # copy just pom.xml
-COPY be/pom.xml .
+COPY ./pom.xml .
 # go-offline using the pom.xml
 RUN mvn dependency:go-offline
 # copy your other files
-COPY be/src ./src
+COPY ./src ./src
 # compile the source code and package it in a jar file
 RUN mvn clean install -Dmaven.test.skip=true
 #Stage 2
