--- a/.github/workflows/frontend-actions.yaml
+++ b/.github/workflows/frontend-actions.yaml
@@ -2,11 +2,11 @@ name: Deploy
 
 on:
   push:
-    branches: main
+    branches: [ main ]
     paths:
       - 'frontend/**'
   pull_request:
-    branches: main 
+    branches: [ main ] 
 
 jobs:
   Deploy:
@@ -14,8 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v2 
       - name: Build & Deploy
+        uses: actions/checkout@v2 
 
       - name: Deploy to server
         uses: easingthemes/ssh-deploy@main
