--- a/.github/workflows/frontend-actions.yaml
+++ b/.github/workflows/frontend-actions.yaml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'frontend/**'
+      - '.github/workflows/frontend-actions.yaml'
   pull_request:
     branches: [ main ] 
 
@@ -21,7 +22,6 @@ jobs:
         uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
-          SOURCE: "./"
           REMOTE_HOST: {{ secrets.REMOTE_HOST }}
           REMOTE_USER: {{ secrets.REMOTE_USER }}
           TARGET: {{ secrets.REMOTE_TARGET }}
