--- a/.github/workflows/backend-actions.yaml
+++ b/.github/workflows/backend-actions.yaml
@@ -22,9 +22,9 @@ jobs:
         uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
-          REMOTE_HOST: {{ secrets.REMOTE_HOST }}
-          REMOTE_USER: {{ secrets.REMOTE_USER }}
-          TARGET: {{ secrets.REMOTE_TARGET }}
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          TARGET: ${{ secrets.REMOTE_TARGET }}
           SCRIPT_BEFORE: |
             whoami
             ls -la
