--- a/.github/workflows/backend-actions.yaml
+++ b/.github/workflows/backend-actions.yaml
@@ -28,6 +28,7 @@ jobs:
           SCRIPT_BEFORE: |
             whoami
             ls -la
+            echo "Hello World!"
           SCRIPT_AFTER: |
             whoami
             ls  -la
