--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   nginx:
       image: nginx:latest
@@ -18,7 +17,7 @@ services:
       - NODE_OPTIONS=--max-old-space-size=4096
     restart: unless-stopped
     tty: true
-    env_file: ./frontend/.env.prod
+    env_file: ./frontend/.env
 
   backend:
     build: ./backend
@@ -26,7 +25,7 @@ services:
     tty: true
     depends_on:
       - db
-    env_file: ./backend/.env.prod
+    env_file: ./backend/.env
 
     volumes:
       - /root/images:/app/uploads
