--- a/.github/workflows/frontend-actions.yaml
+++ b/.github/workflows/frontend-actions.yaml
@@ -25,9 +25,4 @@ jobs:
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            echo $(whoami) > info.txt
-            echo $(pwd) >> info.txt
-            cd /home/ec2-user/hieu_exe 
-            ls -la
-            git pull
-            docker-compose build frontend && docker-compose up -d frontend
+            ./frontend.sh
