--- a/backend/.env
+++ b/backend/.env
@@ -12,7 +12,7 @@ MAIL_PORT=587
 GOOGLE_USERNAME=<GOOGLE_USERNAME>
 GOOGLE_PASSWORD=<GOOGLE_PASSWORD>
 
-MYSQL_HOST=localhost
+MYSQL_HOST=db
 MYSQL_PORT=3306
 MYSQL_DB=hieudb
 MYSQL_USER=root
