--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name xxx;
+    server_name ec2-3-235-151-19.compute-1.amazonaws.com;
 
     location / {
       proxy_pass http://frontend:3000;
@@ -17,7 +17,7 @@ server {
 
 server {
     listen 80;
-    server_name xxx;
+    server_name backend:8080;
 
     location / {
       client_max_body_size 10M;
