change nginx.config file

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ec2-3-235-151-19.compute-1.amazonaws.com;
+    server_name jobseeker-exe.site;
 
     location / {
       proxy_pass http://frontend:3000;
@@ -16,7 +16,7 @@ server {
 
 
 server {
-    listen 80;
+    listen 8080;
     server_name backend:8080;
 
     location / {
