--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,7 @@ server {
 
 server {
     listen 8080;
-    server_name backend:8080;
+    server_name jobseeker-exe.site;
 
     location / {
       client_max_body_size 10M;
