--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,21 @@ server {
       proxy_set_header Host $host;
       proxy_set_header REMOTE_ADDR $remote_addr;
       proxy_set_header X-Forwarded-Proto $scheme;
+      if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS';
+            #
+            # Custom headers and headers various browsers *should* be OK with but aren't
+            #
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+            #
+            # Tell client that this pre-flight info is valid for 20 days
+            #
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+      }
     }
     access_log /var/log/nginx/frontend_access.log;
     error_log /var/log/nginx/frontend_error.log;
@@ -27,6 +42,21 @@ server {
       proxy_set_header Host $host;
       proxy_set_header REMOTE_ADDR $remote_addr;
       proxy_set_header X-Forwarded-Proto $scheme;
+      if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS';
+            #
+            # Custom headers and headers various browsers *should* be OK with but aren't
+            #
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+            #
+            # Tell client that this pre-flight info is valid for 20 days
+            #
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+      }
     }
 
     access_log /var/log/nginx/backend_access.log;
